K3s/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: custom-css
              mountPath: /app/public/custom.css
              subPath: custom.css
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homepage-config
        - name: custom-css
          configMap:
            name: homepage-custom-css
