K3s/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31271
  type: NodePort
